# Trading-bot

./: .env.example  .gitignore  README.md  prompt.md  pyproject.toml  requirements.txt
.github/workflows/: generate-main.yml
hybrid_trader/: __init__.py  cli.py  env_checks.py  filesystem.py  logging_utils.py  manifest.py  settings.py
scripts/: generate_main_md.py
