[project]
name = "hybrid_trader"
version = "0.1.0"
description = "Foundation utilities for a professional crypto trading system"
readme = "README.md"
authors = [{name = "Hybrid Trader"}]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "ntplib>=0.4.0",
    "requests>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "flake8"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
